apps/base/matrix/continuwuity/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: continuwuity
spec:
    replicas: 1
    selector:
        matchLabels:
            app: continuwuity
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                app: continuwuity
        spec:
            containers:
                - name: continuwuity
                  resources:
                      limits: {}
                      requests:
                          memory: "100Mi"
                          cpu: "28m"
                  image: forgejo.ellis.link/continuwuation/continuwuity:main
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8448
                  # Mount the continuwuity config which is stored in the continuwuity-config secret at the config path and should go to /config.yaml
                  volumeMounts:
                      - name: continuwuity-config
                        mountPath: /etc/continuwuity
                        readOnly: true
                      - name: continuwuity-data
                        mountPath: /var/lib/continuwuity
            livenessProbe:
                httpGet:
                    path: /_matrix/client/versions
                    port: 8448
                initialDelaySeconds: 10
                timeoutSeconds: 5
            readinessProbe:
                httpGet:
                    path: /_matrix/client/versions
                    port: 8448
                initialDelaySeconds: 10
                timeoutSeconds: 5
            # Mount the continuwuity config which is stored in the continuwuity-config secret at the config path and should go to /config.yaml
            volumes:
                - name: continuwuity-config
                  secret:
                      secretName: continuwuity-config
                - name: continuwuity-data
                  persistentVolumeClaim:
                      claimName: continuwuity
---
apiVersion: v1
kind: Service
metadata:
    name: continuwuity
spec:
    selector:
        app: continuwuity
    ports:
        - name: http
          protocol: TCP
          port: 8448
          targetPort: 8448
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: continuwuity
    namespace: matrix
spec:
    parentRefs:
        - name: envoy-gateway
          namespace: envoy-gateway
    hostnames:
        - matrix.mtrnord.blog
    rules:
        - backendRefs:
              - name: continuwuity
                port: 8448
          timeouts:
              request: 240s
              backendRequest: 0s
